--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,74 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/currency"
+            style="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginLeft="32dp" android:id="@+id/textView" android:layout_marginTop="128dp"
+            android:textColor="@color/colorPrimary"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/converter"
+            style="@style/TextAppearance.AppCompat.Display1"
+            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
+            android:id="@+id/textView2"
+            android:textColor="@color/colorPrimary"
+    />
+    <View
+            android:layout_width="12sp"
+            android:layout_height="12sp"
+            android:id="@+id/view" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/textView2"
+            android:layout_marginLeft="4dp" android:layout_marginStart="4dp"
+            android:background="@drawable/round_shape"
+            android:backgroundTint="@color/colorAccent"/>
+    <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:id="@+id/frameLayout">
+
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="hint"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+                android:text="@string/currency_ngn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/from_currency"
+                android:layout_gravity="center_vertical|end"
+                android:textSize="20sp"
+                android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>
+    </FrameLayout>
+
+    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:id="@+id/testButton"
+            android:text="test"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
+    <ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/testButton" android:layout_marginTop="32dp">
+        <TextView
+                android:text="TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/test_tv"/>
+    </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
