--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,33 +42,55 @@
             app:layout_constraintBottom_toBottomOf="@+id/textView2"
             app:layout_constraintStart_toEndOf="@+id/textView2" />
 
+    <TextView
+            android:id="@+id/firstCurrencyRateTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            tools:text="1 Nigerian Naira equals" />
+
+    <TextView
+            android:id="@+id/secondCurrencyRateTv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="#000"
+            android:textSize="32sp"
+            app:layout_constraintEnd_toEndOf="@+id/fromCurrencyFrameLayout"
+            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/firstCurrencyRateTv"
+            tools:text="0.0028 United States Dollars" />
+
     <LinearLayout
             android:id="@+id/fromCurrencyFrameLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:background="@drawable/currency_amount_layout_background"
             android:paddingStart="16dp"
             android:paddingTop="12dp"
-            android:paddingEnd="16dp"
 
+            android:paddingEnd="16dp"
             android:paddingBottom="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2">
+            app:layout_constraintTop_toBottomOf="@+id/secondCurrencyRateTv">
 
 
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/from_currency_ET"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#00000000"
                 android:hint="@string/amount_placeholder"
-                android:layout_weight="1"
                 android:inputType="numberDecimal" />
 
 
