--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
-                android:layout_marginTop="96dp"
+                android:layout_marginTop="48dp"
                 android:text="@string/currency"
                 android:textColor="@color/colorPrimary"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -51,8 +51,8 @@
                 android:id="@+id/firstCurrencyRateTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="16sp"
+                android:layout_marginTop="48dp"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
                 tools:text="1 Nigerian Naira equals" />
@@ -69,24 +69,34 @@
                 app:layout_constraintTop_toBottomOf="@+id/firstCurrencyRateTv"
                 tools:text="0.0028 United States Dollars" />
 
+        <TextView
+                android:id="@+id/lastUpdatedTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="@+id/secondCurrencyRateTv"
+                app:layout_constraintTop_toBottomOf="@+id/secondCurrencyRateTv"
+                tools:text="Last updated: 7th Jan, 2020. 01:00 GMT+1" />
+
+
         <LinearLayout
                 android:id="@+id/fromCurrencyFrameLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginLeft="32dp"
-                android:layout_marginTop="24dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginRight="32dp"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/currency_amount_layout_background"
                 android:paddingStart="16dp"
                 android:paddingTop="12dp"
-
                 android:paddingEnd="16dp"
                 android:paddingBottom="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/secondCurrencyRateTv">
+                app:layout_constraintTop_toBottomOf="@+id/lastUpdatedTv">
 
 
             <com.google.android.material.textfield.TextInputEditText
@@ -186,7 +196,6 @@
 
             </androidx.appcompat.widget.AppCompatSpinner>
         </LinearLayout>
-
 
         <!--    <Button-->
         <!--            android:id="@+id/testButton"-->
