--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:paddingBottom="48dp">
 
             <TextView
                     android:id="@+id/textView"
@@ -204,15 +205,15 @@
             <FrameLayout
                     android:id="@+id/rates_graph_container"
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
+                    android:layout_height="400dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginLeft="32dp"
+                    android:layout_marginTop="32dp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginRight="32dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/select_currencies_layout"
-                    tools:layout_height="500dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/select_currencies_layout" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
