--- a/app/src/main/res/layout/fragment_rates_visualization.xml
+++ b/app/src/main/res/layout/fragment_rates_visualization.xml
@@ -4,12 +4,12 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="32dp"
         tools:context=".di.RatesVisualizationFragment">
 
     <lecho.lib.hellocharts.view.LineChartView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/rates_chart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
