--- a/app/src/main/res/layout/fragment_rates_visualization.xml
+++ b/app/src/main/res/layout/fragment_rates_visualization.xml
@@ -4,9 +4,14 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         tools:context=".di.RatesVisualizationFragment">
 
     <lecho.lib.hellocharts.view.LineChartView
+            android:layout_marginTop="32dp"
             android:id="@+id/rates_chart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
