Add different date ranges

--- a/app/src/main/res/drawable/rates_display_background.xml
+++ b/app/src/main/res/drawable/rates_display_background.xml
@@ -4,6 +4,8 @@
 
     <solid android:color="@color/colorPrimary" />
 
-    <corners android:radius="32dp" />
+    <corners
+            android:topLeftRadius="32dp"
+            android:topRightRadius="32dp" />
 
 </shape>
