--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="48dp">
+                android:layout_height="wrap_content">
 
             <TextView
                     android:id="@+id/textView"
@@ -47,8 +46,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginLeft="4dp"
                     android:layout_marginBottom="8dp"
-                    android:background="@drawable/round_shape"
-                    android:backgroundTint="@color/colorAccent"
+                    android:background="@drawable/round_shape_green"
                     app:layout_constraintBottom_toBottomOf="@+id/textView2"
                     app:layout_constraintStart_toEndOf="@+id/textView2" />
 
@@ -205,7 +203,7 @@
             <FrameLayout
                     android:id="@+id/rates_graph_container"
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
+                    android:layout_height="520dp"
                     android:layout_marginTop="32dp"
                     android:background="@drawable/rates_display_background"
                     app:layout_constraintEnd_toEndOf="parent"
