--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3E80D9</color>
     <color name="colorPrimaryDark">#0161D2</color>
     <color name="colorAccent">#08D59A</color>
+    <color name="dim_white">#66FFFFFF</color>
+    <color name="white">#FFFFFF</color>
 </resources>
